# NexusEngine

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cesium_diag.txt  patch_cesium.cmake  patch_cesium_cache.py  vcpkg.json
.github/workflows/: build.yml  ci.yml  release.yml
Data/Models/: sphere.mtl
Data/Models/g1/: g1_description_low.urdf
Data/Models/g1/meshes_low/: head_link.stl  left_ankle_pitch_link.stl  left_ankle_roll_link.stl  left_elbow_link.stl  left_hip_pitch_link.stl  left_hip_roll_link.stl  left_hip_yaw_link.stl  left_knee_link.stl  left_rubber_hand.stl  left_shoulder_pitch_link.stl  left_shoulder_roll_link.stl  left_shoulder_yaw_link.stl  left_wrist_pitch_link.stl  left_wrist_roll_link.stl  left_wrist_yaw_link.stl  logo_link.stl  pelvis.stl  right_ankle_pitch_link.stl  right_ankle_roll_link.stl  right_elbow_link.stl  right_hip_pitch_link.stl  right_hip_roll_link.stl  right_hip_yaw_link.stl  right_knee_link.stl  right_rubber_hand.stl  right_shoulder_pitch_link.stl  right_shoulder_roll_link.stl  right_shoulder_yaw_link.stl  right_wrist_pitch_link.stl  right_wrist_roll_link.stl  right_wrist_yaw_link.stl  torso_link.stl  waist_roll_link.stl  waist_support_link.stl  waist_yaw_link.stl
Data/Models/go1/: go1_low.urdf
Data/Models/go1/meshes_low/: calf.stl  depthCamera.stl  hip.stl  thigh.stl  thigh_mirror.stl  trunk.stl  ultraSound.stl
Data/Models/go2/: go2_description_low.urdf
Data/Models/go2/dae_low/: base.stl  calf.stl  calf_mirror.stl  foot.stl  hip.stl  thigh.stl  thigh_mirror.stl
Data/Scenes/: default_scene.json  drone.xml  g1_scene.json  go1_scene.json  pbr_scene.json  person_follow_scene.json  test_scene.xml
Data/Scenes/g1_mujoco/: g1_29dof_rev_1_0.xml  scene.xml  scene_23dof.xml  scene_29dof.xml  scene_29dof_rev.xml
Data/Scenes/go2_mujoco/: go2.xml  scene.xml  scene_terrain.xml
Data/Shaders/: Cull.hlsl  MDI.hlsl  MeshTest.hlsl  MeshletCull.hlsl  Triangle.hlsl  UI.hlsl  dump_PSMain.spv  dump_VSMain.spv
Data/UI/: demo.rml  editor_layout.rml  editor_style.rcss
cmake/: DetectTriplet.cmake
src/App/: Main.cpp
src/App/Shaders/: Triangle.hlsl
src/Bridge/: Base.h  Bridge.cpp  CMakeLists.txt  CommonTypes.h  Config.h.in  Context.h  ECS.h  Entity.h  ImageReader.h  Interfaces.h  Log.cpp  Log.h  PhysicsThread.h  RenderProxy.h  ResourceLoader.cpp  ResourceLoader.h  Texture.h  Threading.h  thirdparty.h
src/Bridge/Jolt/: Jolt_PhysicsSystem.cpp  Jolt_PhysicsSystem.h
src/Bridge/MuJoCo/: MuJoCo_PhysicsSystem.cpp  MuJoCo_PhysicsSystem.h
src/Bridge/Sdl/: SDL_Window.cpp  SDL_Window.h
src/Bridge/Vk/: Material.cpp  Material.h  VK_BindlessManager.cpp  VK_BindlessManager.h  VK_Buffer.cpp  VK_Buffer.h  VK_CommandBuffer.cpp  VK_CommandBuffer.h  VK_Context.cpp  VK_Context.h  VK_DescriptorManager.cpp  VK_DescriptorManager.h  VK_IndirectBuffer.cpp  VK_IndirectBuffer.h  VK_MeshPipeline.cpp  VK_MeshPipeline.h  VK_Pipeline.cpp  VK_Pipeline.h  VK_Renderer.cpp  VK_Renderer.h  VK_RmlUi_Renderer.cpp  VK_RmlUi_Renderer.h  VK_RmlUi_System.cpp  VK_RmlUi_System.h  VK_ShaderCompiler.cpp  VK_ShaderCompiler.h  VK_Swapchain.cpp  VK_Swapchain.h  VK_Texture.cpp  VK_Texture.h  VK_TextureUploader.cpp  VK_TextureUploader.h  VK_UIBridge.cpp  VK_UIBridge.h
src/Core/: CMakeLists.txt  Cesium3DTilesetSystem.cpp  Cesium3DTilesetSystem.h  CesiumAssetAccessor.cpp  CesiumAssetAccessor.h  CesiumComponents.h  CesiumPrepareRendererResources.cpp  CesiumPrepareRendererResources.h  CesiumTaskProcessor.cpp  CesiumTaskProcessor.h  CesiumTileRenderResources.h  Components.h  DrawCommandGenerator.cpp  DrawCommandGenerator.h  GlobalSceneTable.cpp  GlobalSceneTable.h  HierarchySystem.cpp  HierarchySystem.h  MeshManager.cpp  MeshManager.h  MeshletBuilder.cpp  MeshletBuilder.h  ModelLoader.cpp  ModelLoader.h  RenderSystem.cpp  RenderSystem.h  RoboticsDynamicsSystem.cpp  RoboticsDynamicsSystem.h  RosBridgeSystem.cpp  RosBridgeSystem.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SceneSerializer.cpp  SceneSerializer.h  SceneTrunk.cpp  SceneTrunk.h  StreamingManager.cpp  StreamingManager.h  (+4 more)
src/Editor/: EditorUIManager.cpp  EditorUIManager.h  Panel.h
tests/: CMakeLists.txt  Test_Main.cpp  test_scene_graph.cpp
tests/Bridge/: Test_Bindless.cpp  Test_Headless_Rendering.cpp  Test_Material_System.cpp  Test_MeshShader.cpp  Test_MuJoCo_Physics.cpp  Test_SDL_Window.cpp  Test_Streaming.cpp  Test_Texture_Loading.cpp  Test_Threading_Safety.cpp
triplets/: arm64-linux-static.cmake  x64-linux-static.cmake  x64-windows-static.cmake
